--- a/src/features/services/_services.scss
+++ b/src/features/services/_services.scss
@@ -3,7 +3,8 @@
   display: flex;
   .cust-reward-section {
     width: 60%;
-    height: calc(100vh - 64px);
+    height: 100%;
+    min-height: fit-content;
     padding: 100px 60px;
 
     .coming-soon {
@@ -35,11 +36,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 40px;
 
     .services-form {
-      width: 85%;
-      height: 85%;
-      background-color: rgba(255, 255, 255, 0.689);
+      background-color: rgba(255, 255, 255, 0.805);
       border-radius: 10px;
       padding: 30px;
 
@@ -50,6 +50,27 @@
         width: unset;
         display: unset;
         flex-direction: unset;
+
+        .text-area {
+          .ant-input {
+            border: 1px solid rgba(42, 143, 255, 0.4);
+            border-radius: 2px;
+            -webkit-transition: all 0.3s;
+            transition: all 0.3s;
+            border-radius: 20px;
+            resize: none;
+          }
+          .ant-input:focus,
+          .ant-input-focused {
+            border-right-width: unset !important;
+            box-shadow: unset;
+          }
+        }
+        .submit-btn {
+          width: 100%;
+          display: flex;
+          justify-content: flex-end;
+        }
       }
     }
   }
