services responsive done

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -159,7 +159,6 @@ p {
 // custom input styling
 
 .ant-form-item-control {
-  margin: 3px 0px;
   width: 100%;
 }
 
@@ -732,38 +731,38 @@ p {
   }
 }
 
-@media screen and (min-width: 541px) and (max-width: 1024px) {
-  .c-input {
-    width: 100%;
-    max-width: 300px;
-    min-width: 160px;
-    margin: 10px;
+// @media screen and (min-width: 541px) and (max-width: 1024px) {
+//   .c-input {
+//     width: 100%;
+//     max-width: 300px;
+//     min-width: 160px;
+//     margin: 10px;
 
-    input.ant-input-sm,
-    input.ant-input-lg,
-    input.ant-input-medium,
-    .ant-picker {
-      width: 100%;
-    }
-    .ant-select {
-      width: 100% !important;
-    }
-    // input {
-    //   &.ant-input-lg {
-    //     width: 100%;
-    //   }
+//     input.ant-input-sm,
+//     input.ant-input-lg,
+//     input.ant-input-medium,
+//     .ant-picker {
+//       width: 100%;
+//     }
+//     .ant-select {
+//       width: 100% !important;
+//     }
+//     // input {
+//     //   &.ant-input-lg {
+//     //     width: 100%;
+//     //   }
 
-    //   &.ant-input-sm {
-    //     width: 100%;
+//     //   &.ant-input-sm {
+//     //     width: 100%;
 
-    //   }
-    //   &.xs {
-    //     width: 100%;
+//     //   }
+//     //   &.xs {
+//     //     width: 100%;
 
-    //   }
-    // }
-  }
-}
+//     //   }
+//     // }
+//   }
+// }
 @media screen and (max-width: 1024px) {
   .react-tel-input .form-control {
     width: unset !important;
