--- a/src/features/employerAndAgency/_EmployerAndAgency.scss
+++ b/src/features/employerAndAgency/_EmployerAndAgency.scss
@@ -2,7 +2,7 @@
 .emp-agncy-main {
   padding: 40px 0;
   .c-containers {
-    padding: 0 80px;
+    padding: 0 88px;
     .c-row {
       display: flex;
       .cell-half {
@@ -16,24 +16,36 @@
         width: 100%;
       }
       .text-section {
-        width: 100%;
-        max-width: 600px;
+        width: 50%;
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
         flex: unset;
-        padding: 0 20px;
+        // padding: 0 20px;
         min-width: 400px;
       }
       .image-section {
-        width: 100%;
+        width: 50%;
         min-width: 500px;
         flex: unset;
         padding: 0 20px;
         display: flex;
-        justify-content: center;
+        // justify-content: center;
 
         img {
           width: 100%;
-          max-width: 1000px;
+          // max-width: 850px;
         }
+      }
+      .align-left {
+        justify-content: flex-start;
+      }
+      .align-right {
+        justify-content: flex-end;
+        width: 70%;
+      }
+      .w70 {
+        width: 70%;
       }
     }
   }
@@ -46,6 +58,7 @@
   }
   .job-n-demo {
     display: flex;
+    justify-content: center;
   }
   .sections {
     padding-top: 60px;
