--- a/src/features/pricing/_Pricing.scss
+++ b/src/features/pricing/_Pricing.scss
@@ -1,7 +1,7 @@
 @import "../../assets/scss/variables";
 
 .pricing-container {
-  padding: 30px 10px 30px 50px;
+  padding: 40px 90px;
 
   .heading-section {
     padding: 60px 0;
@@ -106,18 +106,30 @@
   .pricing-details {
     width: 100%;
     display: flex;
-    align-items: center;
     padding-top: 60px;
 
     .video-section {
-      width: 50%;
+      width: 40%;
+      height: 0;
+      padding-bottom: 40%;
+      position: relative;
+
+      .box {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
 
       img {
         width: 100%;
+        height: 100%;
+        object-fit: contain;
       }
     }
     .buy-premuim {
-      width: 50%;
+      width: 60%;
+      padding-block-start: inherit;
+      padding-left: 60px;
 
       .desc {
         font-size: $font-size-x-lg;
@@ -159,7 +171,7 @@
     padding-top: 60px;
 
     .interview-details {
-      width: 30%;
+      width: 40%;
 
       .coming-soon {
         font-size: $font-size-x-lg;
@@ -172,11 +184,11 @@
     }
 
     .interview-image {
-      width: 70%;
+      width: 60%;
 
       img {
         width: 100%;
-        max-width: 800px;
+        max-width: 1100px;
       }
     }
     p {
