--- a/src/features/pricing/_Responsive.scss
+++ b/src/features/pricing/_Responsive.scss
@@ -116,6 +116,7 @@
       }
       .video-section {
         width: 100%;
+        padding-bottom: 60%;
       }
     }
     .interview-details {
@@ -135,6 +136,7 @@
 
       .video-section {
         width: 100%;
+        padding-bottom: 100%;
       }
       .buy-premuim {
         width: 100%;
