--- a/src/shared-ui/Button/_Buttons.scss
+++ b/src/shared-ui/Button/_Buttons.scss
@@ -16,7 +16,7 @@
   span {
     color: $white;
     transition: 0.2s all linear;
-    font-family: $font-bold !important;
+    // font-family: $font-bold !important;
   }
 
   .animated-icon {
