--- a/src/features/services/_Responsive.scss
+++ b/src/features/services/_Responsive.scss
@@ -21,10 +21,14 @@
         font-size: $font-size-md;
       }
       .icons {
-        justify-content: space-evenly;
+        justify-content: center;
+        margin-top: -10px;
         img {
           margin: 0;
-          width: 48px;
+          width: 38px;
+          min-width: fit-content;
+          min-height: fit-content;
+          margin: 10px 20px 0 10px;
         }
       }
     }
