--- a/src/features/pricing/_Pricing.scss
+++ b/src/features/pricing/_Pricing.scss
@@ -118,6 +118,13 @@
         position: absolute;
         width: 100%;
         height: 100%;
+        display: flex;
+        overflow: hidden;
+        video {
+          width: calc(100% + 120px);
+          position: relative;
+          left: -100px;
+        }
       }
 
       img {
