--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -790,10 +790,10 @@ p {
   line-height: 34.4px;
 }
 
-img {
-  image-rendering: -moz-crisp-edges; /* Firefox */
-  image-rendering: -o-crisp-edges; /* Opera */
-  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
-  image-rendering: crisp-edges;
-  -ms-interpolation-mode: nearest-neighbor;
+html {
+  image-rendering: -moz-crisp-edges !important; /* Firefox */
+  image-rendering: -o-crisp-edges !important; /* Opera */
+  image-rendering: -webkit-optimize-contrast !important; /* Webkit (non-standard naming) */
+  image-rendering: crisp-edges !important;
+  -ms-interpolation-mode: nearest-neighbor !important;
 }
