--- a/src/features/employerAndAgency/_EmployerAndAgency.scss
+++ b/src/features/employerAndAgency/_EmployerAndAgency.scss
@@ -35,7 +35,7 @@
     }
   }
   .emp-heading {
-    font-size: $font-size-30;
+    font-size: 40px;
     line-height: 55px;
   }
   .blue {
@@ -49,11 +49,11 @@
     padding-top: 60px;
     h1 {
       font-size: $font-size-30;
-      margin: 0 0 20px 0;
+      margin: 0 0 28px 0;
     }
     p {
       font-size: $font-size-lg;
-      max-width: 380px;
+      max-width: 460px;
     }
   }
 }
