--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -171,12 +171,13 @@ p {
 
   input {
     font-size: $font-size-sm;
-    box-shadow: $theme-shadow !important;
-    border: none !important;
+    // box-shadow: $theme-shadow !important;
+    // border: none !important;
     border-radius: 100px !important;
     height: 32px !important;
     padding: 0 18px !important;
-    box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+    // box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+    border: 1px solid $primary !important;
     background: $white !important;
 
     &.ant-input-lg {
