--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -11,20 +11,21 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 4px;
-  border-radius: 5px;
+  width: 6px;
+  // border-radius: 5px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  // box-shadow: inset 0 0 5px grey;
+  background-color: rgba($color: grey, $alpha: 0.3);
+  // border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: $primary;
-  border-radius: 10px;
+  // border-radius: 10px;
 }
 
 /* Handle on hover */
