--- a/src/shared-ui/Button/_Buttons.scss
+++ b/src/shared-ui/Button/_Buttons.scss
@@ -50,6 +50,29 @@
     }
     color: $white;
   }
+  &.outlined {
+    background: $white;
+    border: 1px solid $primary;
+
+    span {
+      color: $primary;
+    }
+
+    &:hover {
+      background: $primary;
+
+      span {
+        color: $white;
+      }
+    }
+
+    &:focus {
+      background: $primary;
+      span {
+        color: $white;
+      }
+    }
+  }
 
   &.light {
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(106, 210, 89, 1) 0%, rgba(0, 176, 250, 1) 100%);
