--- a/src/features/login/_Responsive.scss
+++ b/src/features/login/_Responsive.scss
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 991px) {
   .c-form {
-    max-width: 400px;
-    width: 100%;
+    // max-width: 400px;
+    // width: 100%;
   }
   .forget-password-app {
     width: 300px !important;
