--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -134,7 +134,8 @@ img {
 
 p {
   margin-top: 12px;
-  font-family: $font-medium !important;
+  // font-family: $font-medium !important;
+  font-family: $font-medium;
 }
 
 .img-back-cover {
