--- a/src/features/employerAndAgency/_EmployerAndAgency.scss
+++ b/src/features/employerAndAgency/_EmployerAndAgency.scss
@@ -1,5 +1,15 @@
 @import "../../assets/scss/variables";
 .emp-agncy-main {
+  h1 {
+    font-family: $font-subtitle;
+    font-size: 36px;
+    margin: 0 0 20px 0;
+  }
+  p {
+    font-size: 24px;
+    max-width: 480px;
+    font-family: $font-light;
+  }
   padding: 40px 0;
   .c-containers {
     padding: 0 88px;
@@ -46,14 +56,14 @@
     justify-content: center;
   }
   .sections {
-    padding-top: 60px;
-    h1 {
-      font-size: $font-size-30;
-      margin: 0 0 28px 0;
-    }
-    p {
-      font-size: $font-size-lg;
-      max-width: 460px;
-    }
+    padding-top: 200px;
+    // h1 {
+    //   font-size: $font-size-30;
+    //   margin: 0 0 28px 0;
+    // }
+    // p {
+    //   font-size: $font-size-lg;
+    //   max-width: 460px;
+    // }
   }
 }
