--- a/src/features/jobs/_Jobs.scss
+++ b/src/features/jobs/_Jobs.scss
@@ -87,7 +87,8 @@
     padding: 0px;
 
     .jobs-list {
-      padding: 15px 10px 0px 10px;
+      padding: 15px 30px;
+      // padding: 15px;
       height: calc(100vh - 124px);
       overflow-y: scroll;
     }
@@ -111,17 +112,24 @@
     .job-filter-section {
       display: flex;
       align-items: center;
-      height: 60px;
+      // height: 60px;
       justify-content: space-around;
       width: 100%;
-      padding: 0 15px;
-
+      padding: 30px 36px 10px 32px;
       input {
         width: 100%;
       }
       .c-input {
         width: 100%;
         margin: 0 8px;
+
+        &:first-child {
+          margin: 0 8px 0 0;
+        }
+
+        .ant-input-prefix {
+          margin: 0;
+        }
       }
     }
   }
