--- a/src/features/services/_services.scss
+++ b/src/features/services/_services.scss
@@ -1,11 +1,21 @@
 @import "../../assets/scss/variables";
 .services-main {
   display: flex;
+
+  h1 {
+    font-family: $font-subtitle;
+    font-size: 36px;
+    margin: 0 0 20px 0;
+  }
+  p {
+    font-size: 24px;
+    font-family: $font-light;
+  }
   .cust-reward-section {
     width: 60%;
     height: 100%;
     min-height: fit-content;
-    padding: 100px 60px;
+    padding: 100px 88px;
 
     .coming-soon {
       color: $blue;
@@ -14,7 +24,7 @@
     }
     .services-desc {
       font-size: $font-size-30;
-      margin: 25px 0 0 0;
+      margin: 20px 0;
     }
     .full-desc {
       font-size: $font-size-lg;
@@ -38,16 +48,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px;
+    padding: 60px;
 
     .services-form {
       background-color: rgba(255, 255, 255, 0.805);
       border-radius: 10px;
       padding: 30px;
 
-      p {
+      .services-desc {
         font-size: $font-size-lg;
+        line-height: 35px;
+        font-family: $font-medium;
       }
+
+      // p {
+      //   font-size: $font-size-lg;
+      // }
       .services-form-wrapper {
         width: unset;
         display: unset;
@@ -56,7 +72,6 @@
         .text-area {
           .ant-input {
             border: 1px solid $primary;
-
             -webkit-transition: all 0.3s;
             transition: all 0.3s;
             border-radius: 20px;
