--- a/src/features/login/_Login.scss
+++ b/src/features/login/_Login.scss
@@ -1,6 +1,13 @@
 @import "../../assets/scss/variables";
 
+.auth-wrapper {
+  background-image: url("../../assets/images/bg.png");
+  background-size: cover;
+  background-position: center;
+}
+
 .login-container {
+  background-color: #fff;
   .user-type {
     width: 100%;
     display: flex;
@@ -24,6 +31,7 @@
   }
   .first-container {
     position: relative;
+    z-index: 1;
     .login-background-image {
       width: 100%;
       height: 100%;
@@ -33,6 +41,8 @@
     }
   }
   .second-container {
+    z-index: 22;
+
     .login-form {
       align-items: center;
       label {
