--- a/src/features/signup/_SignUp.scss
+++ b/src/features/signup/_SignUp.scss
@@ -156,6 +156,19 @@
       }
     }
   }
+  .ant-picker-input > input:placeholder-shown {
+    text-overflow: ellipsis;
+    border: none !important;
+  }
+  .c-input .ant-picker {
+    box-shadow: none !important;
+    border: 1px solid $primary;
+  }
+  .react-tel-input {
+    .c-input > input {
+      background-color: transparent !important;
+    }
+  }
 }
 
 .form-actions {
