--- a/src/app-ui/JobFilter/_JobFilter.scss
+++ b/src/app-ui/JobFilter/_JobFilter.scss
@@ -41,6 +41,10 @@
         position: absolute;
         bottom: -30px;
       }
+      .c-input-with-icon {
+        width: 100%;
+        max-width: 300px;
+      }
     }
 
     .margin-y {
