--- a/src/app-ui/_index.scss
+++ b/src/app-ui/_index.scss
@@ -29,3 +29,4 @@
 @import "Footer/Responsive";
 @import "Header/Responsive";
 @import "../shared-ui/Modal/Responsive";
+@import "../app-ui/JobFilter/Responsive";
