--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -581,7 +581,10 @@ p {
   height: 3px;
 }
 
-.ant-steps-item-finish > .ant-steps-item-container > .ant-steps-item-content > .ant-steps-item-title::after {
+.ant-steps-item-finish
+  > .ant-steps-item-container
+  > .ant-steps-item-content
+  > .ant-steps-item-title::after {
   background-color: $green;
 }
 
@@ -789,8 +792,11 @@ p {
   }
 }
 // select placeholder
-.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector::after,
-.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-item,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector::after,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector
+  .ant-select-selection-item,
 .ant-select-single.ant-select-lg:not(.ant-select-customize-input)
   .ant-select-selector
   .ant-select-selection-placeholder {
