--- a/src/features/home/_Responsive.scss
+++ b/src/features/home/_Responsive.scss
@@ -1,159 +1,265 @@
 @import "../../assets/scss/variables";
 
-@media only screen and (max-width: 991px) {
+// @media only screen and (min-width: 768px) and (max-width: 991px) {
+//   .home {
+//     // .c-banner-responsive {
+//     //   // display: unset;
+//     //   .imgs-row {
+//     //     width: 100%;
+//     //     display: flex;
+//     //     .banner-img-main {
+//     //       .showimg {
+//     //         opacity: 1;
+//     //         transition: all ease 0.4s;
+//     //       }
+//     //       .showimglate {
+//     //         opacity: 1;
+//     //         transition: all ease 0.4s;
+//     //       }
+//     //     }
+//     //   }
+//     // }
+//     .banner-spacing {
+//       padding-left: 0;
+//       text-align: center;
+//     }
+
+//     .margin-mobile {
+//       margin: 1em 0;
+//     }
+//     .first-banner-heading-container {
+//       margin: 1em 0;
+//       padding: 0 10px !important;
+//     }
+//     .main-heading {
+//       font-size: 30px;
+
+//       .banner-heading-highlight {
+//         font-size: 30px;
+//       }
+//     }
+//     .sub-heading {
+//       margin: 25px 0px;
+//       font-size: 20px;
+//     }
+//     .first-banner-heading-container {
+//       .inner-container {
+//         .banner-content {
+//           font-size: 14px;
+//           margin: 10.5px 0 34px 0;
+//         }
+//       }
+//     }
+//     .home-content-container {
+//       margin: 77.5px 0 0 0;
+//     }
+//     .mobile-textalign {
+//       font-size: 30px;
+//       text-align: center;
+//     }
+
+//     .container-benefit {
+//       padding: 0 56px;
+//       margin: 0 0 94px 0;
+
+//       // .inner-container {
+//       //   .box {
+//       //     min-width: unset;
+//       //     justify-content: unset;
+//       //     width: 250px;
+//       //     align-items: flex-start;
+//       //     img {
+//       //       width: 55px;
+//       //     }
+//       //     .a-text {
+//       //       color: #1a1d3d;
+//       //       font-size: 16px;
+//       //       font-family: "Gordita-Bold";
+//       //     }
+//       //     p {
+//       //       font-size: 12px;
+//       //       max-width: 297px;
+//       //     }
+//       //   }
+//       // }
+//     }
+//     .container-filters {
+//       padding: 0 56px;
+//       margin: 0 0 calc(216px / 2) 0;
+//     }
+//     .home-content-container {
+//       margin: 38.8px 0 0 0;
+//     }
+//     .bottom-logo {
+//       max-width: 287px;
+//       width: 100%;
+//     }
+//     .padding-mobile {
+//       padding: 0 20px 40px 20px !important;
+//     }
+//     .sub-heading {
+//       text-align: center;
+//     }
+//     .mobile-textalign {
+//       text-align: center;
+//       padding-right: 10px !important;
+//     }
+//     .button-center {
+//       margin: 0 auto;
+//     }
+//     .c-container-centered-content {
+//       margin: 20px 0;
+//     }
+//   }
+//   .home .ea-container .inner-container .box:first-of-type {
+//     margin-left: 0px;
+//   }
+//   .home .ea-container .inner-container .box {
+//     display: flex;
+
+//     margin-left: 0px;
+//     margin: 1em 0;
+//     img {
+//       width: 100px;
+//     }
+//   }
+//   .home .first-banner-heading-container {
+//     padding: 0px 50px 0px 50px;
+//   }
+// }
+// @media only screen and (max-width: 767.5px) {
+//   .home .ea-container .inner-container .box {
+//     display: flex;
+//     align-items: flex-start;
+
+//     margin-left: 0px;
+//     margin: 1.5em 0;
+//     img {
+//       width: 70px;
+//     }
+//   }
+//   .home .ea-container .inner-container .box {
+//     span {
+//       padding: 8px 8px 0 8px;
+//     }
+//     h3 {
+//       margin-bottom: 4px;
+//     }
+//     p {
+//       margin: 0;
+//     }
+//     display: flex;
+
+//     margin-left: 0px;
+//     margin: 1.5em 0;
+//     img {
+//       width: 65px;
+//     }
+//   }
+//   .home .main-heading {
+//     padding: 0 10px;
+//     font-size: 26px;
+//     h5 {
+//       font-size: 16px;
+//     }
+//   }
+//   .img-mobile {
+//     width: 95% !important;
+//     align-items: flex-start !important;
+//     justify-content: center !important;
+//     align-self: flex-start !important;
+//     justify-self: flex-start !important;
+//   }
+//   .safari-fix {
+//     align-self: flex-start !important;
+//     justify-self: flex-start !important;
+//   }
+//   .home {
+//     .c-banner-desktop {
+//       // display: none;
+//     }
+//     .c-banner-responsive {
+//       // display: unset;
+//       .imgs-row {
+//         width: 100%;
+//         display: flex;
+//         .banner-img-main {
+//           .showimg {
+//             opacity: 1;
+//             transition: all ease 0.3s;
+//           }
+//           .showimglate {
+//             opacity: 1;
+//             transition: all ease 0.3s;
+//             transition-delay: 2s;
+//           }
+//         }
+//       }
+//     }
+//     .mobile-textalign {
+//       padding: 0 10px;
+//       font-size: 16px;
+//       font-family: $font-light;
+//     }
+//   }
+//   .space {
+//     display: block;
+//     height: 40px;
+//   }
+// }
+
+@media screen and (max-width: 767px) {
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+}
+
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1400px) {
   .home {
-    .c-banner-responsive {
-      // display: unset;
-      .imgs-row {
-        width: 100%;
-        display: flex;
-        .banner-img-main {
-          .showimg {
-            opacity: 1;
-            transition: all ease 0.4s;
-          }
-          .showimglate {
-            opacity: 1;
-            transition: all ease 0.4s;
-          }
+    .first-banner-heading-container {
+      padding: calc(124px / 2) 0 0 0;
+      .inner-container {
+        .banner-content {
+          margin: 20px 0;
         }
       }
-    }
-    .ea-container {
-      .inner-container {
-        flex-direction: column;
-      }
-    }
-    .margin-mobile {
-      margin: 1em 0;
-    }
-    .first-banner-heading-container {
-      margin: 1em 0;
-      padding: 0 10px !important;
-    }
-    .main-heading {
-      text-align: center;
-      margin: 10px 0 0 0;
-      padding: 0 10px;
-    }
-    .mobile-textalign {
-      text-align: center;
-    }
-    .bottom-logo {
-      max-width: 287px;
-      width: 100%;
-    }
-    .padding-mobile {
-      padding: 0 20px 40px 20px !important;
     }
     .sub-heading {
-      text-align: center;
+      margin: calc(53px / 2) 0px;
+      font-size: 20px;
     }
-    .mobile-textalign {
-      text-align: center;
-      padding-right: 10px !important;
+    .banner-spacing {
+      padding-left: calc(124px / 2);
     }
-    .button-center {
-      margin: 0 auto;
-    }
-    .c-container-centered-content {
-      margin: 20px 0;
-    }
-  }
-  .home .ea-container .inner-container .box:first-of-type {
-    margin-left: 0px;
-  }
-  .home .ea-container .inner-container .box {
-    display: flex;
+    .main-heading {
+      font-size: 35px;
+      margin: 0 0 15px 0;
 
-    margin-left: 0px;
-    margin: 1em 0;
-    img {
-      width: 100px;
-    }
-  }
-  .home .first-banner-heading-container {
-    padding: 0px 50px 0px 50px;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .home .ea-container .inner-container .box {
-    display: flex;
-    align-items: flex-start;
-
-    margin-left: 0px;
-    margin: 1.5em 0;
-    img {
-      width: 70px;
-    }
-  }
-  .home .ea-container .inner-container .box {
-    span {
-      padding: 8px 8px 0 8px;
-    }
-    h3 {
-      margin-bottom: 4px;
-    }
-    p {
-      margin: 0;
-    }
-    display: flex;
-
-    margin-left: 0px;
-    margin: 1.5em 0;
-    img {
-      width: 65px;
-    }
-  }
-  .home .main-heading {
-    padding: 0 10px;
-    font-size: 26px;
-    h5 {
-      font-size: 16px;
-    }
-  }
-  .img-mobile {
-    width: 95% !important;
-    align-items: flex-start !important;
-    justify-content: center !important;
-    align-self: flex-start !important;
-    justify-self: flex-start !important;
-  }
-  .safari-fix {
-    align-self: flex-start !important;
-    justify-self: flex-start !important;
-  }
-  .home {
-    .c-banner-desktop {
-      // display: none;
-    }
-    .c-banner-responsive {
-      // display: unset;
-      .imgs-row {
-        width: 100%;
-        display: flex;
-        .banner-img-main {
-          .showimg {
-            opacity: 1;
-            transition: all ease 0.3s;
-          }
-          .showimglate {
-            opacity: 1;
-            transition: all ease 0.3s;
-            transition-delay: 2s;
-          }
-        }
+      .banner-heading-highlight {
+        font-size: 35px;
       }
     }
-    .mobile-textalign {
-      padding: 0 10px;
-      font-size: 16px;
-      font-family: $font-light;
+    .home-content-container {
+      text-align: center;
+      margin: calc(157px / 2) 0 0 0;
+      .main-heading {
+        font-size: 35px;
+        margin: 0 0 15px 0;
+      }
+      h5 {
+        font-size: 20px;
+      }
     }
-  }
-  .space {
-    display: block;
-    height: 40px;
+    .container-benefit {
+      padding: 0 calc(112px / 2);
+      margin: 0 0 calc(188px / 2) 0;
+    }
+    .c-container-centered-content {
+      margin: 100px 0px;
+    }
   }
 }
 
