--- a/src/app-ui/CountryCityModal/CountryCityModal.scss
+++ b/src/app-ui/CountryCityModal/CountryCityModal.scss
@@ -48,7 +48,7 @@
         display: flex;
         align-items: center;
         padding: 1em 2em;
-        border-bottom: $theme-border;
+        // border-bottom: $theme-border;
         cursor: pointer;
         img {
           width: 40px;
